--- a/Task 1.ipynb
+++ b/Task 1.ipynb
@@ -14,7 +14,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 1,
+            "execution_count": 19,
             "metadata": {},
             "outputs": [],
             "source": "import pandas as pd\nimport numpy as np\nimport matplotlib.pyplot as plt"
@@ -26,7 +26,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 2,
+            "execution_count": 20,
             "metadata": {},
             "outputs": [
                 {
@@ -44,7 +44,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 3,
+            "execution_count": 21,
             "metadata": {},
             "outputs": [
                 {
@@ -57,7 +57,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 4,
+            "execution_count": 22,
             "metadata": {},
             "outputs": [
                 {
@@ -65,7 +65,7 @@
                         "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Hours</th>\n      <th>Scores</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>2.5</td>\n      <td>21</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>5.1</td>\n      <td>47</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>3.2</td>\n      <td>27</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>8.5</td>\n      <td>75</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>3.5</td>\n      <td>30</td>\n    </tr>\n  </tbody>\n</table>\n</div>",
                         "text/plain": "   Hours  Scores\n0    2.5      21\n1    5.1      47\n2    3.2      27\n3    8.5      75\n4    3.5      30"
                     },
-                    "execution_count": 4,
+                    "execution_count": 22,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
@@ -74,7 +74,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 5,
+            "execution_count": 23,
             "metadata": {},
             "outputs": [
                 {
@@ -82,7 +82,7 @@
                         "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Hours</th>\n      <th>Scores</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>20</th>\n      <td>2.7</td>\n      <td>30</td>\n    </tr>\n    <tr>\n      <th>21</th>\n      <td>4.8</td>\n      <td>54</td>\n    </tr>\n    <tr>\n      <th>22</th>\n      <td>3.8</td>\n      <td>35</td>\n    </tr>\n    <tr>\n      <th>23</th>\n      <td>6.9</td>\n      <td>76</td>\n    </tr>\n    <tr>\n      <th>24</th>\n      <td>7.8</td>\n      <td>86</td>\n    </tr>\n  </tbody>\n</table>\n</div>",
                         "text/plain": "    Hours  Scores\n20    2.7      30\n21    4.8      54\n22    3.8      35\n23    6.9      76\n24    7.8      86"
                     },
-                    "execution_count": 5,
+                    "execution_count": 23,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
@@ -91,14 +91,14 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 7,
+            "execution_count": 24,
             "metadata": {},
             "outputs": [
                 {
                     "data": {
                         "text/plain": "Hours     0\nScores    0\ndtype: int64"
                     },
-                    "execution_count": 7,
+                    "execution_count": 24,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
@@ -112,7 +112,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 8,
+            "execution_count": 25,
             "metadata": {},
             "outputs": [
                 {
@@ -135,7 +135,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 9,
+            "execution_count": 26,
             "metadata": {},
             "outputs": [],
             "source": "x = data.iloc[:, :-1].values\ny = data.iloc[:, 1].values"
@@ -147,7 +147,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 11,
+            "execution_count": 27,
             "metadata": {},
             "outputs": [],
             "source": "from sklearn.model_selection import train_test_split\nx_train, x_test , y_train , y_test = train_test_split(x, y , test_size=0.2, random_state=0)"
@@ -159,7 +159,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 12,
+            "execution_count": 28,
             "metadata": {},
             "outputs": [
                 {
@@ -172,7 +172,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 13,
+            "execution_count": 29,
             "metadata": {},
             "outputs": [
                 {
@@ -189,11 +189,103 @@
             "source": "## plotting the regression Line\n\nline = regressor.coef_*x+regressor.intercept_\n\n##g plotting for the test data\nplt.scatter(x,y , c='blue')\nplt.plot(x, line)\nplt.show()"
         },
         {
-            "cell_type": "code",
-            "execution_count": null,
+            "cell_type": "markdown",
             "metadata": {},
-            "outputs": [],
-            "source": ""
+            "source": "## Predictions"
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 30,
+            "metadata": {},
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": "[[1.5]\n [3.2]\n [7.4]\n [2.5]\n [5.9]]\n"
+                }
+            ],
+            "source": "print(x_test) # testing data - In hours\ny_pred = regressor.predict(x_test) # Predicting the scores"
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 32,
+            "metadata": {},
+            "outputs": [
+                {
+                    "data": {
+                        "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Actual</th>\n      <th>Predicted</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>20</td>\n      <td>16.884145</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>27</td>\n      <td>33.732261</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>69</td>\n      <td>75.357018</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>30</td>\n      <td>26.794801</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>62</td>\n      <td>60.491033</td>\n    </tr>\n  </tbody>\n</table>\n</div>",
+                        "text/plain": "   Actual  Predicted\n0      20  16.884145\n1      27  33.732261\n2      69  75.357018\n3      30  26.794801\n4      62  60.491033"
+                    },
+                    "execution_count": 32,
+                    "metadata": {},
+                    "output_type": "execute_result"
+                }
+            ],
+            "source": "# Comparing Actual vs Predicted\ndf = pd.DataFrame({\"Actual\" : y_test, \"Predicted\": y_pred})\ndf"
+        },
+        {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": "## Model Evaluation "
+        },
+        {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": "The final step is to evaluate the performance of algorithm. This step is particularly important to compare how well different algorithms perform on a particular dataset. For simplicity here, we have chosen the mean square error. There are many such metrics."
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 33,
+            "metadata": {},
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": "Coefficient: [9.91065648]\nIntercept: 2.018160041434662\n"
+                }
+            ],
+            "source": "print(\"Coefficient:\",regressor.coef_)\nprint(\"Intercept:\",regressor.intercept_)"
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 36,
+            "metadata": {},
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": "Mean Absolute Error: 4.183859899002982\n"
+                }
+            ],
+            "source": "from sklearn import metrics\nprint(\"Mean Absolute Error:\", metrics.mean_absolute_error(y_test, y_pred))"
+        },
+        {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": "## Solution"
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 38,
+            "metadata": {},
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": "No of Hours = 9.25\nPredicted Score = 93.69173248737539\n"
+                }
+            ],
+            "source": "hours=9.25\nown_pred=regressor.predict([[hours]])\nprint(\"No of Hours = {}\".format(hours))\nprint(\"Predicted Score = {}\".format(own_pred[0]))"
+        },
+        {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": "## Conclusion"
+        },
+        {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": "### Therefore, According to the given Model\n\nIf a student studies for 9.25hrs/day, then "
         }
     ],
     "metadata": {
